; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_demux.c_demux_DestroyDemux.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_demux.c_demux_DestroyDemux.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32*, i32, i32 }
%struct.vlc_demux_private = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @demux_DestroyDemux to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @demux_DestroyDemux(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca %struct.vlc_demux_private*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %5 = call %struct.vlc_demux_private* @vlc_stream_Private(%struct.TYPE_5__* %4)
  store %struct.vlc_demux_private* %5, %struct.vlc_demux_private** %3, align 8
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %7 = load %struct.vlc_demux_private*, %struct.vlc_demux_private** %3, align 8
  %8 = getelementptr inbounds %struct.vlc_demux_private, %struct.vlc_demux_private* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @module_unneed(%struct.TYPE_5__* %6, i32 %9)
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @free(i32 %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @free(i32 %17)
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = icmp ne i32* %21, null
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load i32*, i32** %26, align 8
  %28 = call i32 @vlc_stream_Delete(i32* %27)
  ret void
}

declare dso_local %struct.vlc_demux_private* @vlc_stream_Private(%struct.TYPE_5__*) #1

declare dso_local i32 @module_unneed(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @free(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @vlc_stream_Delete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
